<resources>
    <string name="app_name">CarteResto</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="panier">Panier</string>
    <string name="valide">Valide</string>
    <string name="logo">LOGO</string>
    <string name="prompt_table">Table number</string>
    <string name="error_invalid_table">Numéro de table n\'est pas correct!</string>
    <string name="title_no_dispo">Table no disponible</string>
    <string name="msg_no_dispo">Cette table n\'est pas disponible. Vous voulez continuer         reentrée dans cette commande?</string>
    <string name="title_dispo">Table disponible</string>
    <string name="msg_dispo">Table est dispoble.</string>
    <string name="description">Description</string>
    <string name="cancle">Annuler</string>
    <string name="inite">Initialization du application</string>
    <string name="menu_detail_titre">Menu international</string>
    <string name="menu_detail_default_price">16,80 €</string>
    <string name="menu_detail_button_minus">-</string>
    <string name="menu_detail_button_plus">+</string>
    <string name="menu_detail_number_zero">0</string>
    <string name="menu_detail_presentation">Description</string>
    <string name="menu_detail_description_text">
        Un menu rempli de saveurs du monde entier.
        \nBon appétit !
    </string>
    <string name="starters">Entrées</string>
    <string name="main_dishes">Plats principaux</string>
    <string name="deserts">Desserts</string>
    <string name="apero">Apéro</string>
    <string name="menu_detail_more_impossible">Opération impossible</string>
    <string name="menu_detail_more_impossible_message">Vous n\'avez droit qu\'à un seul plat à chaque étape du menu.
    Si vous le souhaitez, vous pouvez ajouter un menu supplémentaire sur le panneau de gauche. Le nombre actuel est %1$d.</string>
    <string name="menu_detail_more_impossible_positive_btn">OK</string>
    <string name="menu_detail_less_menus_impossible">Impossible de diminuer le nombre de menus</string>
    <string name="menu_detail_less_menus_impossible_message">
        Veuillez vérifier que vous n\'avez pas choisi trop de plats par rapport au nombre de menus souhaité : retirez un choix de dans la catégorie <b>%1$s</b>.
    </string>
    <string name="menu_detail_validate_choice">Valider</string>
    <string name="menu_detail_validate_error_title">Validation impossible</string>
    <string name="menu_detail_validate_error_message">
        Vous n\'avez pas choisi assez de plats par rapport au nombre de menus souhaité : rajoutez les choix manquants dans la catégorie %1$s.
    </string>
    <string name="menu_detail_validate_confirmation_title">Confirmer vos choix sur ce menu</string>
    <string name="menu_detail_validate_confirmation_message">
        Êtes-vous sûr(e) de vos choix ?
    </string>
    <string name="menu_detail_validate_ok">Choix enregistrés. Vous pouvez les consulter depuis votre panier.</string>
    <string name="menu_detail_validate_accept">Oui</string>
    <string name="menu_detail_validate_cancel">Non</string>
    <string name="menu_detail_validate_no_menu_added">Vous n\'avez ajouté aucun menu.</string>
    <string name="menu_detail_note_dialog_title">Ajouter une note à votre menu</string>
    <string name="menu_detail_note_dialog_save">Enregistrer</string>
    <string name="menu_detail_note_dialog_cancel">Annuler</string>
    <string name="menu_detail_note_dialog_void">Votre note est vide.</string>
    <string name="menu_detail_note_dialog_note_saved">Note enregistrée.</string>
    <string name="menu_detail_remaining_number">(Encore %1$d à choisir)</string>
    <string name="see_more">detail</string>
    <string name="set_meal">Menus</string>
    <string name="wines">Vins</string>
    <string name="recommendation">recommandation</string>
    <string name="call_witer">Vous voulez rapeler un serveur?</string>
    <string name="waiter_comming">Le serveur arrive!</string>
</resources>
