<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="460dp"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"

    android:orientation="vertical"
    app:layout_collapseParallaxMultiplier="0.6">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/colorAccent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/img_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                tools:src="@drawable/yosenabe" />


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        app:behavior_overlapTop="96dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <android.support.v7.widget.CardView
            android:id="@+id/menu_detail_cardview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/menu_detail_menu_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="This is title" />

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/menu_detail_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="20 €" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/menu_detail_number_less"
                        style="@android:style/Widget.Holo.Button.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/colorAccent"
                        android:src="@drawable/ic_remove_black_24dp"
                        android:tint="@android:color/white"
                        app:fabSize="mini"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/menu_detail_number"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/menu_detail_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/menu_detail_number_zero"
                        android:textSize="30sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/menu_detail_number_more"
                        app:layout_constraintTop_toTopOf="parent" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/menu_detail_number_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:backgroundTint="@color/colorAccent"
                        android:src="@drawable/ic_add_black_24dp"
                        android:tint="@android:color/white"
                        app:fabSize="mini"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/space3"
                        app:layout_constraintTop_toTopOf="parent" />

                    <android.support.v4.widget.Space
                        android:id="@+id/space3"
                        android:layout_width="@dimen/activity_horizontal_margin"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/menu_detail_add_note"
                        app:layout_constraintTop_toTopOf="parent" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/menu_detail_add_note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="@color/colorAccent"
                        android:cropToPadding="false"
                        android:padding="2dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/note"
                        android:tint="@android:color/white"
                        app:fabSize="mini"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/menu_detail_presentation"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/menu_detail_description_text" />


                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/menu_detail_validate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:foregroundGravity="center"
        android:src="@drawable/ic_check_black_24dp"
        android:text="@string/menu_detail_validate_choice"
        android:tint="@android:color/white"
        app:fabSize="normal"
        app:layout_anchor="@+id/menu_detail_cardview"
        app:layout_anchorGravity="top|right|end" />
</android.support.design.widget.CoordinatorLayout>